--- a/annotation-converter/styles.css
+++ b/annotation-converter/styles.css
@@ -12,5 +12,13 @@
 
 .form-input {
     padding: 0;
-    min-width: 50px;
+    padding: 10px;
+    margin-left: 0;
+    justify-content: space-between;
+    text-wrap: nowrap;
+}
+
+.form-submit {
+    width: 100%;
+    text-align: center;
 }
